components/profile-controller/config/overlays/kubeflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profiles-kfam
  ports:
    - port: 8081
